--- a/scss/achievements/achievements.scss
+++ b/scss/achievements/achievements.scss
@@ -17,7 +17,7 @@
     .achievements-num {
         color: #C53D28;
         margin-bottom: 5px;
-        font: 900 4rem 'Roboto', sans-serif;
+        font: 900 4rem "gotham-bold";
     }
     .achievements-text {
         font-weight: normal;
