--- a/scss/btn/btn.scss
+++ b/scss/btn/btn.scss
@@ -4,7 +4,7 @@
     padding: 15px 10px;
     max-width: 200px;
     margin: 0 auto;
-    font: bold 1rem 'Roboto', sans-serif;
+    font: 1rem "gotham-bold";
     color: #fff;
     transition: .3s;
     &:hover {
@@ -23,7 +23,7 @@
     padding: 11px 35px;
     max-width: 200px;
     margin: 0 auto;
-    font: bold 1rem 'Roboto', sans-serif;
+    font: 1rem "gotham-bold";
     color: #C53D28;
     transition: .3s;
     border: 3px solid #C53D28;
