--- a/scss/contact/contact.scss
+++ b/scss/contact/contact.scss
@@ -20,11 +20,11 @@
         color: #000;
         padding-left: 35px;
         position: relative;
-        font: 900 1.125rem 'Roboto', sans-serif;
+        font: 900 1.125rem "gotham-bold";
     }
     .contact-info {
         color: #000;
-        font: normal 1.1rem/25px 'Roboto', sans-serif;
+        font: normal 1.1rem/25px "noto-sans-normal";
     }
 }
 
