--- a/scss/banner/banner.scss
+++ b/scss/banner/banner.scss
@@ -3,11 +3,12 @@
     background: url(../img/banner/banner-bg.png) no-repeat center center fixed;
     background-size: cover;
     @media (max-width: 768px) {
-        height: 300px;
+        height: 350px;
         display: flex;
         justify-content: center;
         align-items: center;
-        background: url(../img/banner/banner-bg.png) no-repeat center center;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/banner/mob.png);
+        background-size: cover;
     }
     .btn-dark {
         display: block;
@@ -24,7 +25,7 @@
         padding-top: 0;
     }
     .banner-title {
-        font: bold 3rem 'Roboto', sans-serif;
+        font: 3rem "gotham-bold";
         color: #fff;
         margin-bottom: 10px;
         @media (max-width: 990px) {
@@ -42,7 +43,7 @@
         }
     }
     .banner-text {
-        font: normal 1.1rem 'Roboto', sans-serif;
+        font: 1.1rem "noto-sans-normal";
         color: #fff;
         margin-bottom: 20px;
         @media (max-width: 990px) {
@@ -55,7 +56,7 @@
         }
     }
     .social-title {
-        font: normal .9rem 'Roboto', sans-serif;
+        font: .9rem "noto-sans-normal";
         color: #fff;
         margin-bottom: 15px;
         @media (max-width: 576px) {
