--- a/scss/sale/sale.scss
+++ b/scss/sale/sale.scss
@@ -5,6 +5,7 @@
     grid-gap: 25px;
     @media (max-width: 990px) {
         grid-template-columns: 1fr;
+        grid-gap: 45px;
     }
     .sale-box {
         text-align: center;
@@ -22,14 +23,15 @@
             &::before {
                 content: '25%';
                 position: absolute;
-                font: 900 8rem 'Roboto', sans-serif;
+                font: 8rem "gotham-bold";
                 color: #C53D28;
                 opacity: .5;
                 left: 10%;
                 top: -70px;
                 z-index: -1;
                 @media (max-width: 990px) {
-                   left: 8%;
+                   left: 4%;
+                   top: -65px;
                 }
             }
         }
@@ -39,7 +41,7 @@
             &::before {
                 content: '15%';
                 position: absolute;
-                font: 900 8rem 'Roboto', sans-serif;
+                font: 8rem "gotham-bold";
                 color: #C53D28;
                 opacity: .5;
                 left: -35%;
@@ -47,6 +49,7 @@
                 z-index: -1;
                 @media (max-width: 990px) {
                     left: -45%;
+                    top: -65px;
                 }
             }
         }
@@ -56,7 +59,7 @@
             &::before {
                 content: '10%';
                 position: absolute;
-                font: 900 8rem 'Roboto', sans-serif;
+                font: 8rem "gotham-bold";
                 color: #C53D28;
                 opacity: .5;
                 left: -20%;
@@ -64,12 +67,13 @@
                 z-index: -1;
                 @media (max-width: 990px) {
                     left: -22%;
+                    top: -65px;
                  }
             }
         }
     }
     .sale-title {
-        font: 900 2rem 'Roboto', sans-serif;
+        font: 2rem "gotham-bold";
         margin-bottom: 30px;
         position: relative;
         @media (max-width: 990px) {
@@ -77,7 +81,7 @@
         }
     }
     .sale-text {
-        font: normal 1.125rem 'Roboto', sans-serif;
+        font: 1.125rem "noto-sans-normal";
         @media (max-width: 990px) {
             font-size: .95rem;
         }
