--- a/scss/why/why.scss
+++ b/scss/why/why.scss
@@ -10,7 +10,7 @@
         grid-gap: 25px;
     }
     .why-box {
-        background: #FFFFFF;
+        background: #FFF;
         box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.07);
         border-radius: 15px;
         padding: 30px 20px;
@@ -35,6 +35,7 @@
         p {
             font-size: 1.2rem;
             line-height: 26px;
+            font-family: "noto-sans-normal";
             @media (max-width: 990px) {
                 font-size: 1rem;
                 text-align: center;
